posiGen_FullsendBox/src/objects/Lease_Transaction__c.object
<CustomObject>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fees__c</fullName>
        <label>Fees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>G_L_Date__c</fullName>
        <label>G/L Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Impound__c</fullName>
        <label>Impound</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Interest__c</fullName>
        <label>Interest</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Late_Charges__c</fullName>
        <label>Late Charges</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Amount__c</fullName>
        <label>Payment Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Method_Reference__c</fullName>
        <label>Payment Method Reference</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Method__c</fullName>
        <label>Payment Method</label>
        <picklist>
            <picklistValues>
                <fullName>Check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lockbox</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Misc Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Money Gram</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Money Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Cash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NONE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PG-ACH DIRECT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PG-GLOBAL EAST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Western Union</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Principal__c</fullName>
        <label>Principal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Reference__c</fullName>
        <label>Reference</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Suspense__c</fullName>
        <label>Suspense</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TransType__c</fullName>
        <label>TransType</label>
        <picklist>
            <picklistValues>
                <fullName>Cash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Cash</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Transaction_Date__c</fullName>
        <label>Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>UDBs__c</fullName>
        <label>UDBs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Lease Transaction</label>
    <listViews>
        <fullName>All</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Transaction_Date__c</columns>
        <columns>TransType__c</columns>
        <columns>Payment_Amount__c</columns>
        <columns>Principal__c</columns>
        <columns>Late_Charges__c</columns>
        <columns>Fees__c</columns>
        <columns>Suspense__c</columns>
        <columns>Interest__c</columns>
        <columns>Impound__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>LT-{000000}</displayFormat>
        <label>Lease Transaction ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lease Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>